# offwebsite

./: README.md
back/: LICENSE  pyproject.toml  vercel.json
back/src/: Admin.py  core.py  main.py  sync_ctf.py
front/: index.html  package-lock.json  package.json
front/src/: App.jsx  index.css
front/src/components/: index.js
front/src/components/ui/: MacDock.jsx  Navbar.jsx  VideoBackground.jsx  Welcome.jsx  WindowControls.jsx
front/src/constants/: index.js
front/src/hoc/: WindowWrapper.jsx
front/src/store/: window.js
front/src/windows/: Achievements.jsx  Contacts.jsx  Events.jsx  Members.jsx  Safari.jsx  index.js
